OS/Arch/iptables/iptables.rules
# Generated by iptables-save v1.6.1 on Sat Sep 30 12:00:22 2017
*nat
:PREROUTING ACCEPT [678:95740]
:INPUT ACCEPT [112:15926]
:OUTPUT ACCEPT [528:39571]
:POSTROUTING ACCEPT [528:39571]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sat Sep 30 12:00:22 2017
# Generated by iptables-save v1.6.1 on Sat Sep 30 12:00:22 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [1:342]
:OUTPUT ACCEPT [392:47155]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p 41 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
COMMIT
# Completed on Sat Sep 30 12:00:22 2017
